# RAGProductionApp

./: .gitignore  README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/f55a7fbc-75b9-4a39-8398-7bddece95963/: mutable_id_tracker.mappings
